[package]
name = "wasm"
version = "0.1.0"
authors = ["John Lees <john@johnlees.me>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.51"
wasm-bindgen = "0.2"
simple-error = "0.2"
console_error_panic_hook = "*"

[dependencies.web-sys]
version = "0.3"
features = [
  'Blob',
  'console',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'HtmlImageElement',
  'Response',
  'Window',
]

[profile.release]
lto = true
